<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@android:color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/favorites"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_night"
        android:icon="@drawable/ic_night"
        android:title="@string/night_mode"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_goto"
        android:title="@string/go_to_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_next_match"
        android:title="@string/next_match"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_prev_match"
        android:title="@string/prev_match"
        app:showAsAction="never" />
</menu>
